<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/transition_card_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/round_ripple"
        android:transitionName="@string/detail_card_transition"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/card_image_view"
                android:layout_width="@dimen/movie_image_view_width"
                android:layout_height="@dimen/movie_image_view_height"
                android:contentDescription="@string/image"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/textViewMovieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:layout_gravity="center"
                android:text="@string/movie_name" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>