<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/dr_strange"
    tools:context="com.t4zb.kotlinapitesting.ui.fragment.profile.UserProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/frag_nested_lyt_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim_bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="39dp"
                android:orientation="horizontal"
                android:paddingHorizontal="30dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="11dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_sign_in"
                    android:text="UPDATE"
                    android:textColor="@color/textColorDARK" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signOutBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_sign_up"
                    android:text="Sign OUT"
                    android:textColor="@color/textColorDARK" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_reg_edit_text_horizontal"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_reg_edit"
                android:textColorHint="@color/movieGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/icon_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:startIconDrawable="@drawable/mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="@color/icon_gray"
                    android:hint="@string/e_mail"
                    android:textColor="@color/movieGray"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_reg_edit_text_horizontal"
                android:layout_marginTop="95dp"
                android:background="@drawable/bg_reg_edit"
                android:textColorHint="@color/movieGray"
                app:startIconTint="@color/icon_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
                app:startIconDrawable="@drawable/account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/movieGray"
                    android:drawableTint="@color/icon_gray"
                    android:hint="@string/user_name"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_reg_edit_text_horizontal"
                android:layout_marginTop="21dp"
                android:background="@drawable/bg_reg_edit"
                android:textColorHint="@color/movieGray"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconTint="@color/icon_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableTint="@color/icon_gray"
                    android:textColor="@color/movieGray"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_view"
                android:layout_width="142dp"
                android:layout_height="142dp"
                android:layout_marginTop="144dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/round_ripple"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars">

            </de.hdodenhof.circleimageview.CircleImageView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

